--- a/src/App.css
+++ b/src/App.css
@@ -3,55 +3,61 @@
   flex-direction: column;
   align-items: center;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
+  background: rgb(238,174,202);
+  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+}
+
+h1 {
+  margin-top: 3%;
 }
 
 .section-container {
-  width: 60%;
+  width: 40%;
 }
 
 section {
   display: block;
 }
 
-input {
-  width: 100%;
-  height: 100px;
+textarea {
+  width: 88%;
+  height: 60px;
+  border: 2px solid black;
+  text-align: center;
+  font-size: x-large;
+  overflow-wrap: break-word;
+  white-space: pre-wrap;
+  padding: 20px;
+  padding-top: 30px;
+  font-family: monospace;
 }
 
 .button {
-  width: 80px;
+  width: 100%;
   height: 40px;
+  font-size: larger;
+  font-weight: bold;
+  background-color: black;
+  color: rgb(238,174,202);
+  margin-top: 10px;
+  margin-bottom: 40px;
+  border: 2px solid black;
+  border-radius: 6px;
 }
 
-.result {
-  display: block;
+.button:hover {
+  background-color: #FFCB4C;
+  color: black;
 }
 
-/* .App {
-  text-align: center;
-} */
-
-/* .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-} */
-
-/* .App-link {
-  color: #61dafb;
+.entry-container {
+  background-color: white;
+  border: 2px solid black;
+  padding-right: 25px;
+  padding-left: 25px;
+  padding-bottom: 25px;
+  margin-bottom: 10px;
+  font-size: x-large;
+  font-family: monospace;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
