--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .app-container {
+  font-family: monospace;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,6 +11,9 @@
 
 h1 {
   margin-top: 3%;
+  margin-bottom: 30px;
+  font-size: 30px;
+  font-family: sans-serif;
 }
 
 .section-container {
@@ -18,13 +22,6 @@ h1 {
 
 section {
   display: block;
-}
-
-#dropdown-basic {
-  display: flex;
-  width: 100%;
-  background-color: transparent;
-  border: 2px solid black;
 }
 
 .prompt-ideas {
@@ -42,7 +39,6 @@ textarea {
   white-space: pre-wrap;
   padding: 20px;
   padding-top: 30px;
-  font-family: monospace;
 }
 
 .button {
@@ -56,11 +52,22 @@ textarea {
   margin-bottom: 40px;
   border: 2px solid black;
   border-radius: 6px;
+  cursor: pointer;
 }
 
 .button:hover {
   background-color: #FFCB4C;
   color: black;
+}
+
+#button-reversed {
+  background-color: #FFCB4C;
+  font-size: 16px;
+  color: black;
+  width: auto;
+  height: 30px;
+  margin-bottom: 10px;
+  margin-top: 0px;
 }
 
 .entry-container {
@@ -71,5 +78,15 @@ textarea {
   padding-bottom: 25px;
   margin-bottom: 10px;
   font-size: x-large;
-  font-family: monospace;
+}
+
+.entry-header {
+  font-size: x-large;
+  text-decoration: underline;
+}
+
+footer {
+  padding-top: 20px;
+  padding-bottom: 30px;
+  font-size: large;
 }
