--- a/src/App.css
+++ b/src/App.css
@@ -90,3 +90,19 @@ footer {
   padding-bottom: 30px;
   font-size: large;
 }
+
+@media only screen and (max-width: 450px) {
+  .section-container {
+    width: 80%;
+  }
+
+  textarea {
+    width: 87%;
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  textarea {
+    width: 86%;
+  }
+}
